[gd_scene load_steps=2 format=3 uid="uid://cqiyawxjg4p6u"]

[ext_resource type="Script" path="res://game.gd" id="1_qkeyi"]

[node name="game" type="Node2D"]
script = ExtResource("1_qkeyi")

[node name="lblFps" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1072.0
offset_right = 1146.0
offset_bottom = 23.0
horizontal_alignment = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_right = 48.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
clip_contents = true
layout_mode = 0
offset_right = 600.0
offset_bottom = 31.0

[node name="boxCelSize" type="HBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/HBoxContainer/boxCelSize"]
layout_mode = 2
text = "Cell size (px):"

[node name="txtCellSize" type="LineEdit" parent="Control/HBoxContainer/boxCelSize"]
unique_name_in_owner = true
layout_mode = 2
text = "25"
alignment = 1
max_length = 5
select_all_on_focus = true

[node name="btnSet" type="Button" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Set"

[node name="chbxRunning" type="CheckBox" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Running"

[node name="btnClear" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Speed:"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="sliderSpeed" type="HSlider" parent="Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 90.0

[connection signal="pressed" from="Control/HBoxContainer/btnSet" to="." method="_on_btn_set_pressed"]
[connection signal="toggled" from="Control/HBoxContainer/chbxRunning" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Control/HBoxContainer/btnClear" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Control/HBoxContainer/VBoxContainer/sliderSpeed" to="." method="_on_slider_speed_value_changed"]
